--- a/template.yml
+++ b/template.yml
@@ -1,11 +1,12 @@
 Resources:
-  Ec2Instance:
+  EC2Instance:
     Type: "AWS::EC2::Instance"
     Properties:
+    InstanceType: "t2.micro"
       SecurityGroups:
         - !Ref InstanceSecurityGroup
       KeyName: private-server
-      ImageId: "ami-0e21d934e0e6ab631" # you may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
+      ImageId: "ami-0ff4c8fb495a5a50d" # you may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
   InstanceSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
