--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,27 @@ jobs:
           name: Configure server
           command: |
             ansible-playbook -i inventory main-remote.yml
+  
+  smoke_test:
+      docker:
+        - image: alpine:latest
+      steps:
+        - run: apk add --update curl
+        - run:
+            name: smoke test.
+            command: |
+              URL="http://ec2-35-177-253-238.eu-west-2.compute.amazonaws.com:3000/"
+              if curl -s --head ${URL} 
+              then
+               return 0
+              else
+               return 1
+              fi
 
 workflows:
   my_workflow:
     jobs:
       - configure_infrastructure
+      - smoke_test:
+          requires:
+            - configure_infrastructure
